devel
-----

* Remove obsolete API endpoint /_admin/repair/distributeShardsLike`. This
  API was intended to correct some bad state introduced before 3.2.12 or 3.3.4,
  respectively. It had to be invoked manually by callers and there was never
  any driver support for it.

* Remove now-unused SubqueryExecutor. This is an internal change only and
  should not have any effect on queries, as from 3.8 onwards only spliced
  subqueries should be used in query execution plans and during query
  execution.

* Remove CMake control variable `UNCONDITIONALLY_BUILD_LOG_MESSAGES`.
  Now, any maintainer mode build will build all log messages automatically,
  so we will have full coverage of log message construction during our
  tests. In non-maintainer mode, log messages are still only built when
  actually required. This simplifies the build and increases coverage.

* Updated ArangoDB Starter to 0.15.0-preview-2.

* Updated OpenSSL to 1.1.1k and OpenLDAP to 2.4.58.

* Updated arangosync to 2.0.1.

* Introduce metrics for AQL query memory limit violations:
  - `arangodb_aql_global_query_memory_limit_reached`: Total number of times the
    global query memory limit was violated.
  - `arangodb_aql_local_query_memory_limit_reached`: Total number of times a
    local query memory limit was violated.

* Set the default value for `--query.global-memory-limit` to around 90% of RAM,
  so that a global memory limit is now effective by default.

  The default global memory limit value is calculated by a formula depending on
  the amount of available RAM and will result in the following values for 
  common RAM sizes:
  
  RAM:            0      (0MiB)  Limit:            0   unlimited, %mem:  n/a
  RAM:    134217728    (128MiB)  Limit:     33554432     (32MiB), %mem: 25.0
  RAM:    268435456    (256MiB)  Limit:     67108864     (64MiB), %mem: 25.0
  RAM:    536870912    (512MiB)  Limit:    255013683    (243MiB), %mem: 47.5